fix: make letter spacing of russian dependent on font sizing

--- a/assets/styles/src/base/_globals.scss
+++ b/assets/styles/src/base/_globals.scss
@@ -39,7 +39,7 @@ h1, h2, h3 {
 
   [lang="ru-RU"] & {
     font-family: var(--font-family-cyrillic);
-    letter-spacing: -2px;
+    letter-spacing: -0.02em;
   }
 }
 
